와 미쳤다 미쳤어 진짜 압도적 감사 제발 로그인, 게시글작성 제발

--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -26,3 +26,7 @@ spring.thymeleaf.cache=false
 spring.thymeleaf.check-template-location=true
 spring.thymeleaf.prefix=classpath:/templates/
 spring.thymeleaf.suffix=.html
+
+server.servlet.session.tracking-modes=cookie
+
+session.setMaxInactiveInterval(1800);
