add: html,css,js

--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -7,11 +7,11 @@ spring.datasource.url=jdbc:mysql://localhost:3306/springboot?useSSL=false&allowP
 
 # DB ??? ?? ??
 # ??) spring.datasource.username=root
-spring.datasource.username=LJH098
+spring.datasource.username=root
 
 # DB ?????? ?? ?? ??
 # ??) spring.datasource.password=root
-spring.datasource.password=Ekrrdj@159
+spring.datasource.password=asd8332441
 
 # true ?? ?, JPA ??? ?? ??
 spring.jpa.show-sql=true
